--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,6 +1,7 @@
 // light theme
 $dnd-light-background: #dce4ff;
 $dnd-light-color: #0e0e0e;
+$dnd-settings-menu-hover-light-color: #f3f3f3;
 
 // dark theme
 
