--- a/src/components/Item/Item.scss
+++ b/src/components/Item/Item.scss
@@ -33,10 +33,6 @@
     font-size: 2em;
   }
 
-  &__date {
-    font-size: 1.1em;
-  }
-
   &__body {
     display: flex;
     justify-content: space-between;
@@ -63,4 +59,15 @@
     font-weight: bold;
     transform: rotate(-90deg);
   }
+}
+
+.item-input {
+  height: 50px;
+  width: 90%;
+  border: none;
+  background-color: #edf1ff;
+  border-bottom: 1px solid black;
+  outline: none;
+  font-size: 1.2em;
+  font-weight: 500;
 }
