--- a/src/components/SettingsModal/SettingsModal.scss
+++ b/src/components/SettingsModal/SettingsModal.scss
@@ -1,4 +1,4 @@
-@import '../../styles/index';
+@import "../../styles/index";
 
 .settings-modal {
   display: flex;
@@ -6,9 +6,9 @@
   background: #fff;
   border: 2px solid #000;
   border-radius: 1rem;
-  box-shadow: -3px -4px 24px 0px rgba(86,100,153,0.75);
-  -webkit-box-shadow: -3px -4px 24px 0px rgba(86,100,153,0.75);
-  -moz-box-shadow: -3px -4px 24px 0px rgba(86,100,153,0.75);
+  box-shadow: -3px -4px 24px 0px rgba(86, 100, 153, 0.75);
+  -webkit-box-shadow: -3px -4px 24px 0px rgba(86, 100, 153, 0.75);
+  -moz-box-shadow: -3px -4px 24px 0px rgba(86, 100, 153, 0.75);
   min-width: 170px;
   width: 15vw;
 
