--- a/src/styles/resources/spacing.scss
+++ b/src/styles/resources/spacing.scss
@@ -3,31 +3,31 @@
 @function spacing($_key) {
   $spacing-map: (
     // 5px
-          "5xs": 0.3125rem,
+    "5xs": 0.3125rem,
     // 8px
-          "4xs": 0.5rem,
+    "4xs": 0.5rem,
     // 10px
-          "3xs": 0.625rem,
+    "3xs": 0.625rem,
     // 13px
-          "2xs": 0.8125rem,
+    "2xs": 0.8125rem,
     // 15px
-          "xs": 0.9375rem,
+    "xs": 0.9375rem,
     // 18px
-          "sm": 1.125rem,
+    "sm": 1.125rem,
     // 20px
-          "md": 1.25rem,
+    "md": 1.25rem,
     // 25px
-          "lg": 1.5625rem,
+    "lg": 1.5625rem,
     // 30px
-          "xl": 1.875rem,
+    "xl": 1.875rem,
     // 40px
-          "2xl": 2.5rem,
+    "2xl": 2.5rem,
     // 50px
-          "3xl": 3.125rem
+    "3xl": 3.125rem
   );
 
-  $_known-keys: "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl",
-  "2xl", "3xl";
+  $_known-keys: "5xs", "4xs", "3xs", "2xs", "xs", "sm", "md", "lg", "xl", "2xl",
+    "3xl";
 
   @if not index($_known-keys, $_key) {
     @error format-error-message($_key, "spacing()", $_known-keys);
