Created task menu modal, delete and priority functionality. Code refactor

--- a/src/Setup.scss
+++ b/src/Setup.scss
@@ -1,7 +1,7 @@
 @import "styles/index";
 
 .app-setup {
-  background-color: $dnd-light-background;
+  background-color: $dnd-light-theme-background;
   color: $dnd-light-color;
 
   font-size: $dnd-small-font-size;
