--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,7 +1,8 @@
 // light theme
-$dnd-light-background: #dce4ff;
+$dnd-light-theme-background: #dce4ff;
 $dnd-light-color: #0e0e0e;
 $dnd-settings-menu-hover-light-color: #f3f3f3;
+$dnd-light-theme-item-background: #edf1ff;
 
 // dark theme
 
