Added project colors, custom app background selection

--- a/src/Setup.scss
+++ b/src/Setup.scss
@@ -1,8 +1,7 @@
 @import "styles/index";
 
 .app-setup {
-  background-color: $dnd-light-theme-background;
-  color: $dnd-light-color;
+  color: $dnd-color;
 
   font-size: $dnd-small-font-size;
 }
