--- a/src/components/SettingsMenuOption/options/Background/Background.scss
+++ b/src/components/SettingsMenuOption/options/Background/Background.scss
@@ -1,17 +1,14 @@
 .background {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  &__modal {
-    position: absolute;
-    left: calc(50% - 350px);
-    top: calc(50% - 200px);
-    height: 400px;
-    width: 700px;
-    background-color: red;
-    border: 5px solid black;
-    opacity: 1;
+  input {
+    cursor: pointer;
+  }
+
+  label {
+    font-size: 1.2em;
+    text-align: center;
   }
 }
