--- a/src/components/SettingsMenuOption/options/Language/Language.scss
+++ b/src/components/SettingsMenuOption/options/Language/Language.scss
@@ -10,13 +10,18 @@
     height: 2em;
     cursor: pointer;
 
-    &:last-child {
-      margin-bottom: 0;
+    img {
+      width: 30px;
+      height: 20px;
     }
 
     span {
       font-size: 1.2em;
       margin-left: 0.5rem;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
     }
 
     &:hover {
